update js link name in index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
         <button id="addNewBook">Add New Book</button>
         <div id="allBooks"></div>
     </div>
-    <script src="one.js"></script>
+    <script src="book-library.js"></script>
 </body>
 </html>
