--- a/index.html
+++ b/index.html
@@ -13,6 +13,31 @@
         <button id="addNewBook">Add New Book</button>
         <div id="allBooks"></div>
     </div>
+    <form>
+        <button id='x' >&#10007;</button>
+        <div>
+            <label for="bookName">Book Name:</label><br>
+            <input type="text" id="bookName" name="bookName" placeholder="Enter book name" minlength="1" required>
+        </div>
+        <div>
+            <label for="bookAuthor">Author Name:</label><br>
+            <input type="text" id="bookAuthor" name="bookAuthor" placeholder="Enter book Author" minlength="2"required>
+        </div>
+        <div>
+            <label for="pages">Page amount:</label><br>
+            <input type="number" id="pages" name="pages" placeholder="Enter page amount" min="1" value="0">
+        </div>
+        <div>
+            <label for="read">Check if read</label><br>
+            <input type="checkbox" id="read" name="read" value="read">
+        </div>
+        <div>
+            <button type="submit" id="submit">Submit Book</button>
+            <!-- <button type="reset" id="reset">Reset form</button> -->
+        </div>
+        
+    </form>
+    <div id="overlay"></div>
     <script src="book-library.js"></script>
 </body>
 </html>
